--- a/style.css
+++ b/style.css
@@ -1,4 +1,230 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;900&display=swap');
+
+:root {
+    --cor-principal: #F3F5FC;
+    --Dark-blue-dark-blue-300: #0A3871;
+    --Gray-gray-400: #495057;
+    --White: #FFFFFF;
+    --Gray-gray-500: #343A40;
+    --fonte-primaria: 'Inter', sans-serif;
+}
+
 * {
     margin: 0;
     padding: 0;
+    font-family: var(--fonte-primaria);
 }
+
+body {
+    display: flex;
+    background-color: var(--cor-principal);
+    transition: 0.3s linear;
+    max-height: 90vh;
+}
+
+.main {
+    display: flex;
+    flex: 35%;
+    flex-direction: column;
+}
+
+.main2 {
+    flex: 35%;
+    margin-left: 50px;
+}
+
+.img__logo {
+    margin: 40px 0px 0px 0px
+}
+
+.caixa {
+    flex-direction: column;
+    font-size: 32px;
+    color: var(--Dark-blue-dark-blue-300);
+    margin: 140px 0 100px;
+}
+
+.img__frame {
+    margin-top: 70px;
+}
+
+.input  {
+    background-color: var(--cor-principal);
+    border: 0;
+    font-size: 32px;
+    width: 100%;
+    max-width: 680px;
+    padding: 10px;
+    white-space: pre-line;
+    border: 0;
+    outline: 0;
+    height: 55vh;
+    color: var(--Dark-blue-dark-blue-300);
+    font-family: var(--fonte-primaria);
+    transition: 0.3s linear;
+    line-height: 1.5;
+}
+
+.input::placeholder {
+    color: var(--Dark-blue-dark-blue-300);
+    transition: 0.3s linear;
+}
+
+.botoes {
+    display: flex;
+    box-sizing: border-box;
+    gap: 24px;
+    flex-wrap: unset;
+}
+
+.btn1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 328px;
+    padding: 24px;
+    border-radius: 24px;
+    gap: 8px;
+    border: 0;
+    flex-shrink: 0;
+    background-color: var(--Dark-blue-dark-blue-300);
+    color: var(--White);
+    text-align: center;
+    font-family: var(--fonte-primaria);
+    font-size: 16px;
+    font-weight: 400;
+    transition: all 0.2s ease;
+    cursor: pointer;
+}
+
+.btn1:active {
+    box-shadow: inherit 2px 2px 5px var(--Gray-gray-500);
+    transform: scale(0.96);
+}
+
+.btn2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 328px;
+    padding: 24px;
+    border-radius: 24px;
+    gap: 8px;
+    background-color: #D8DFE8;
+    flex-shrink: 0;
+    border: 1px solid var(--Dark-blue-dark-blue-300);
+    color: var(--Dark-blue-dark-blue-300);
+    text-align: center;
+    font-family: var(--fonte-primaria);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    transition: all 0.2s ease;
+    cursor: pointer;
+}
+
+.btn2:active {
+    box-shadow: inherit 2px 5px var(--Gray-gray-400);
+    transform: scale(0.96);
+}
+
+.caixa2 {
+    flex-direction: column;
+    display: flex;
+    height: 944px;
+    width: 400px;
+    background-color: var(--White);
+    border-radius: 32px;
+    margin: 40px 0px 0px 0px;
+    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.1);
+    transition: 0.3s linear;
+}
+
+.caixaContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-sizing: border-box;
+}
+
+.hidden {
+    display: none
+}
+
+.p {
+    text-align: center;
+    overflow: hidden;
+    font-size: 1rem;
+    color: var(--Gray-gray-400);
+}
+
+.img__boneco {
+    margin-top: 50%;
+    overflow: hidden;
+    height: 50%;
+    width: 100%;
+    box-sizing: border-box;
+    transition: 0.3s linear;
+}
+
+.btn3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 328px;
+    padding: 24px;
+    border-radius: 24px;
+    gap: 8px;
+    background-color: var(--cor-principal);
+    flex-shrink: 0;
+    border: 1px solid var(--Dark-blue-dark-blue-300);
+    color: var(--Dark-blue-dark-blue-300);
+    text-align: center;
+    font-family: var(--fonte-primaria);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    transition: all 0.2s ease;
+    cursor: pointer;
+    margin: 91px 0px 32px 40px;
+}
+
+.btn3:active {
+    box-shadow: inherit 2px 2px 5px var(--Gray-gray-500);
+    transform: scale(0.96);
+}
+
+.output {
+    transform: scale(0.95);
+    border: 0;
+    font-size: 1.5rem;
+    width: 100%;
+    white-space: pre-line;
+    outline: 0;
+    color: var(--Gray-gray-400);
+    font-family: var(--fonte-primaria);
+    overflow: hidden;
+    height: 100%;
+    line-height: 1.5;
+    transition: 0.3s linear;
+}
+
+.textoNovo {
+    height: 100%;
+}
+
+/*footer {
+    background-color: var(--Dark-blue-dark-blue-300);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+    font-family: var(--fonte-primaria);
+    color: var(--White);
+    font-size: 1.3rem;
+    text-align: center;
+    padding: 10px;
+}/
