--- a/style.css
+++ b/style.css
@@ -216,4 +216,173 @@ body {
     height: 100%;
 }
 
+/*O código para resposividade não está completo e sem funcionamento
 
+Estilos para telas menores que 768px (Tablet)
+@media only screen and (max-width: 768px) {
+    
+    body {
+        display: flex;
+        flex-direction: column;
+    }
+
+    header {
+        height: 20%;
+    }
+
+    header .img__logo {
+        margin: 80px 0px 0px -1px;
+    }
+
+    .main {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin-top: 10px;
+    }
+
+    .caixa {
+        display: flex;
+        margin: 75px 0px 3px 40px;
+        width: 90%;
+        overflow: hidden;
+        height: 60vh;
+    }
+
+    .main2 {
+        margin: 0;
+        padding: 32px;
+    }
+
+    .caixa2 {
+        margin-top: 7px;
+        width: 100%;
+        height: 30vh;
+    }
+
+    .img__frame {
+        margin: 0px 0 15px 60px;
+        transform: scale(1.5);
+    }
+
+    .caixaContainer {
+        margin-top: 113px;
+    }
+
+    .p {
+        width: 90%;
+    }
+
+    .output {
+        height: 19vh;
+        transform: scale(0.92);
+    }
+
+    .btn3 {
+        margin: 0px 0px 32px 32px;
+        width: 90%;
+    }
+
+    .img__boneco {
+        display: none;
+    }
+}
+
+Estilos para telas menores que 480px (mobile)
+@media only screen and (max-width: 480px) {
+    
+    body {
+        display: flex;
+        flex-direction: column;
+    }
+
+    header {
+        gap: 74px;
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    header .img__logo {
+        margin: 10px 0px 0px -68px;
+        transform: scale(0.9);
+    }
+
+    .main {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin-top: 10px;
+
+    }
+
+    .caixa {
+        display: flex;
+        margin: 0;
+        width: 100%;
+        overflow: hidden;
+    }
+
+    .img__frame {
+        transform: scale(1.5);
+        max-width: 50%;
+        margin: 13px 0px 0 66px;
+    }
+
+    .input {
+        height: 33vh;
+        width: auto;
+    }
+
+    .botoes {
+        align-items: center;
+        gap: 16px;
+        padding: 16px;
+        flex-direction: column;
+    }
+
+    .btn1,
+    .btn2,
+    .btn3 {
+        width: 100%;
+    }
+
+    .main2 {
+        margin: 0;
+        padding: 9px;
+    }
+
+
+    .caixa2 {
+        margin-top: -7px;
+        width: 100%;
+        height: 39vh;
+    }
+
+    .caixaContainer {
+        margin-top: 100px;
+    }
+
+    .p {
+        width: 90%;
+    }
+
+    .textoNovo {
+        height: 80%;
+    }
+
+    .output {
+        height: 30vh;
+        transform: scale(0.92)
+    }
+
+    .btn3 {
+        margin: -11px 0px 0px 15px;
+        width: 90%;
+    }
+
+    .img__boneco {
+        display: none;
+    }
+
+}
+*/
