--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ body {
     height: 100%;
 }
 
-/*O código para resposividade não está completo e sem funcionamento
+/*O código para resposividade está oncompleto e sem funcionamento
 
 Estilos para telas menores que 768px (Tablet)
 @media only screen and (max-width: 768px) {
